--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^8.0.1",
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/dotenv": "^1.3.0",
     "cross-env": "^5.2.0",
